syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.loopring.lightcone.proto";
package org.loopring.lightcone.proto;

import "google/protobuf/any.proto";

message PaginationQuery {
    int32 index = 1;
    int32 size = 2;
}

message Pagination {
    int32 index = 1;
    int32 size = 2;
    int32 total = 3;
}

message ErrorResp {
    string error_code = 1;
    string msg = 2;
}

message PageResult {
    Pagination pagination = 1;
    google.protobuf.Any data = 2;
}

message StartNewRound {
}