syntax = "proto3";

package org.loopring.lightcone.proto;

message ProtoDemo {
    string query = 1;
    int64 demoId = 2;
}

message Pagination {
    int32 index = 1;
    int32 size = 2;
}

message OrderQuery {
    string orderHash = 1;
    string owner = 2;
}

message OrderResult {
    string orderHash = 1;
    int64 validUntil = 2;
}